feat: loginPage, signinPage

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://LearningApp:nguyenhieu2802@learningapp.pvp2zpc.mongodb.net/datn?retryWrites=true&w=majority&appName=LearningApp
+GOOGLE_CLIENT_ID=985674325035-fncaup9g406fpasdn8s93n0ucgset39h.apps.googleusercontent.com
+JWT_SECRET=supersecretkey
+FRONTEND_URL=http://localhost:5173
