--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "google-auth-library": "^10.4.1",
     "mongoose": "^8.19.2",
     "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
